--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-    "name":             "v-scheduled",
-    "version":          "1.0.0",
-    "description":      "A simple tool to create timers from vue component's methods",
-    "main":             "src/index",
-    "scripts":          {
-        "test": "test"
+    "name": "v-scheduled",
+    "version": "1.0.0",
+    "description": "A simple tool to create timers from vue component's methods",
+    "main": "dist/index.min.js",
+    "scripts": {
+        "watch": "webpack -w",
+        "build:dev": "webpack",
+        "build": "webpack -p",
+        "test": "jest",
+        "lint": "eslint --ext .js src/"
     },
-    "repository":       {
+    "repository": {
         "type": "git",
-        "url":  "git+https://github.com/fxmaxvl/v-scheduled.git"
+        "url": "git+https://github.com/fxmaxvl/v-scheduled.git"
     },
-    "keywords":         [
+    "keywords": [
         "vuejs",
         "vue",
         "timers",
@@ -21,10 +25,26 @@
     "peerDependencies": {
         "vue": "^2.6.11"
     },
-    "author":           "sadowsky",
-    "license":          "MIT",
-    "bugs":             {
+    "devDependencies": {
+        "babel-eslint": "10.0.3",
+        "babel-jest": "^24.9.0",
+        "babel-loader": "^8.0.6",
+        "@babel/plugin-transform-runtime": "^7.7.6",
+        "@babel/runtime": "^7.7.6",
+        "@babel/core": "^7.7.5",
+        "clean-webpack-plugin": "^3.0.0",
+        "eslint": "^6.7.2",
+        "eslint-loader": "^3.0.3",
+        "eslint-plugin-babel": "^5.3.0",
+        "jest": "^24.9.0",
+        "terser-webpack-plugin": "^1.4.1",
+        "webpack": "^4.41.3",
+        "webpack-cli": "^3.3.10"
+    },
+    "author": "sadowsky",
+    "license": "MIT",
+    "bugs": {
         "url": "https://github.com/fxmaxvl/v-scheduled/issues"
     },
-    "homepage":         "https://github.com/fxmaxvl/v-scheduled#readme"
+    "homepage": "https://github.com/fxmaxvl/v-scheduled#readme"
 }
